# demo-shiny-great-docs

./: .gitignore  CITATION.cff  README.md  app.py  great-docs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
scripts/: build-docs.sh
src/penguin_analysis/: __init__.py  analysis.py  data.py  viz.py
